# second_brain_ai_assistant

apps/infrastructure/docker/: Dockerfile  docker-compose.yml
apps/second-brain-offline/: .env  Makefile  main.py  pyproject.toml
apps/second-brain-offline/pipelines/: __init__.py  etl.py
apps/second-brain-offline/src/second_brain_offline/: config.py  utils.py
apps/second-brain-offline/src/second_brain_offline/application/agents/: __init__.py  quality.py
apps/second-brain-offline/src/second_brain_offline/application/crawlers/: crawl4ai.py
apps/second-brain-offline/src/second_brain_offline/domain/: __init__.py  dataset.py  document.py
apps/second-brain-offline/src/second_brain_offline/infrastructure/aws/: s3.py
apps/second-brain-offline/src/second_brain_offline/infrastructure/mongo/: __init__.py  indexes.py  service.py
apps/second-brain-offline/steps/: __init__.py
apps/second-brain-offline/steps/etl/: __init__.py  add_quality_score.py  crawl.py
apps/second-brain-offline/steps/infrastructure/: __init__.py  ingest_to_mongodb.py  read_documents_from_disk.py  save_documents_to_disk.py  upload_to_s3.py
