[project]
name = "second-brain-offline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.14",
    "langchain>=0.3.27",
    "langchain-mongodb>=0.7.0",
    "litellm>=1.75.9",
    "loguru>=0.7.3",
    "pymongo>=4.14.1",
    "tiktoken>=0.11.0",
    "zenml[server]>=0.84.2",
]
